// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a tag 1`] = `
<div>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    <a>
      Test
    </a>
  </button>
</div>
`;

exports[`Button renders a normal button 1`] = `
<div>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Test
  </button>
</div>
`;